--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,7 +28,11 @@ if (flutterVersionName == null) {
     flutterVersionName = '2.0.2'
 }
 
-
+def keystoreProperties = new Properties()
+   def keystorePropertiesFile = rootProject.file('key.properties')
+   if (keystorePropertiesFile.exists()) {
+       keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+   }
 
 android {
     namespace "com.jumli.appafrica"
@@ -63,11 +67,18 @@ android {
         versionName flutterVersionName
     }
 
-
+signingConfigs {
+        release {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword keystoreProperties['storePassword']
+        }
+    }
 
     buildTypes {
         release {
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled false
             shrinkResources false
         }
